@@ -1,3 +1,9 @@
+2020-07-10  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/decetable34.cpp (DeceTableMF34): updated
+	* source/decetable33.cpp (DeceTableMF33NILB5): bug fixed
+	LB=5 assymmetric matrix case added
+
 2020-07-01  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/endflib.cpp (ENDFDelExp): updated
